# MMM

./: .cproject  Design Fase 2.txt  READ_ME_FASE_1.txt  contributors.txt  contributors.txt~  test.txt
CFG/: CFG.cpp  CFG.cpp~  CFG.h  CFG.h~  main.cpp
CNF/: CNF.cpp  CNF.cpp~  CNF.h
CNF_CFG_CYK_FINAL/: CFG.cpp  CFG.h  CNF.cpp  CNF.h  CYK.cpp  Formatter.cpp  Formatter.h  MEI_Grammar.xml  basics.h  main.cpp
CSV_MIDI/: .project  ExampleMIDI.csv  ExampleMIDI.midi  ExampleMIDIOriginal.csv  midiAsCSV.csv  midiAsCSV.midi  test.csv  test2.midi  test3.midi  testNoRest.csv  testOctave.csv  testOctave.midi  testOctaveMidi.csv  testOctaveMidi.midi  testOctaveWithRest.csv  testOctaveWithRest.midi  testOctaveWithRestAndHalf.csv  testOctaveWithRestAndHalf.midi  testOctaveWithRestEnd.midi  testOctaveWithRestMiddle.midi  testWithRest.csv  testWithRest.midi
CYK/: .cproject  CYK.cpp  CYK.h  CYK_main.cpp  holder.txt
CYK_CFG/: CYK.cpp
Converter/: .cproject  testMaps.txt
Documenten/: ProjectProposal_MMM_v2.doc
Fase1/: READ_ME_FASE_1.txt  READ_ME_FASE_1.txt~
Fase1/CNF/: .cproject  CMakeLists.txt  README.txt  run.sh  run.sh~
Fase1/CNF/Debug/: makefile  sources.mk
Fase1/CNF/Debug/src/newCNF/: subdir.mk
Fase1/CNF/Debug/src/newCYK_CFG/: subdir.mk
Fase1/CNF/input/: CFG_CNF_test2.xml  CFG_CNF_test3.xml  CNF1.xml  CNF2.xml  CNF3.xml  MusicXML_Grammar.xml  cursusVoorbeeld.xml  example.xml  newCNF1.xml
Fase1/CNF/src/: CFG.cpp  CMakeLists.txt  CNF.cpp  CNF.h  main.cpp
Fase2/: README_FASE_2
Grammars/: MEI_Grammar.xml  MusicXML_Grammar.xml  MusicXML_grammar.xml  README  Uitleg  (+2 more)
(+456 files in other folders)
